(#71) fix overflowing result table

--- a/neuronal_motifs/client/src/components/MotifPanel.css
+++ b/neuronal_motifs/client/src/components/MotifPanel.css
@@ -6,17 +6,20 @@
     width: 29vw;
     margin: 20px;
     padding: 0;
-    max-height: 90vh;
+    max-height: 86vh;
 }
 
 
 #motif-panel-div .form {
     position: relative;
+    display: flex;
+    flex-direction: column;
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     z-index: 2;
+    max-height: inherit;
 }
 
 #motif-panel-div .motif-selection-div {
@@ -71,6 +74,13 @@
 
 .formRow {
     float: left;
+}
+
+#motif-panel-div .result-section {
+    position: relative;
+    width: inherit;
+    max-height: inherit;
+    overflow-y: auto;
 }
 
 .sketch-panel-options-style {
